bugs fixed (vlozka product not centered properly for mobile devices)

--- a/public/stylesheets/less/index.less
+++ b/public/stylesheets/less/index.less
@@ -208,6 +208,9 @@ main {
     background:@grey-light;
     display:flex;
     flex-direction:column;
+    @media @420 {
+        padding:1rem 1rem 0;
+    }
 }
 
 .content-header {
