--- a/public/stylesheets/less/vlozky.less
+++ b/public/stylesheets/less/vlozky.less
@@ -1,6 +1,9 @@
 .vlozka-items {
     display:flex;
     flex-wrap: wrap;
+    @media @420 {
+        justify-content: center;
+    }
 }
 
 .vlozka-item {
